--- a/web/application/admin/view/type/create.html
+++ b/web/application/admin/view/type/create.html
@@ -1,7 +1,7 @@
-{include file="layout/header" title="投诉与建议" keywords="开源WEB开发框架" /}
+{include file="layout/header" title="投诉与建议" keywords="" /}
 <link href="__STATIC__/js/plugins/bootstrap-fileinput/css/fileinput.css" media="all" rel="stylesheet" type="text/css" />
 <link rel="stylesheet" href="__STATIC__/js/plugins/bootstrapvalidator/css/bootstrapValidator.css"/>
-{include file="layout/left" groupId="$groupId" keywords="开源WEB开发框架" /}
+{include file="layout/left" groupId="$groupId" keywords="" /}
 
 <div class="content-wrapper">
     <div class="content-header">
@@ -13,7 +13,7 @@
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-right">
                         <li class="breadcrumb-item"><a href="#">Home</a></li>
-                        <li class="breadcrumb-item active">商品列表</li>
+                        <li class="breadcrumb-item active">商品分类</li>
                     </ol>
                 </div><!-- /.col -->
             </div><!-- /.row -->
@@ -66,7 +66,6 @@
                                 </div>
                             </div>
                             <!-- /.card-body -->
-
                             <div class="card-footer">
                                 <button type="submit" class="btn btn-primary">添加</button>
                             </div>
@@ -93,7 +92,7 @@
     </div>
 </div>
 
-{include file="layout/footer" title="$title" keywords="开源WEB开发框架" /}
+{include file="layout/footer" title="$title" keywords="" /}
 <script src="__STATIC__/js/plugins/bootstrap-fileinput/js/fileinput.js" type="text/javascript"></script>
 <script type="text/javascript" src="__STATIC__/js/plugins/bootstrapvalidator/js/bootstrapValidator.js"></script>
 <script type="text/javascript">
@@ -110,7 +109,7 @@
         allowedPreviewTypes: ['image'],
         allowedFileTypes: ['image'],
         allowedFileExtensions:  ['jpg', 'png'],
-        maxFileSize : 2000,
+        maxFileSize : 2048,
         maxFileCount: 1,
         uploadExtraData: function(previewId, index) {   //额外参数的关键点
             var obj = {};
@@ -121,6 +120,8 @@
     $('#add-file').on("fileuploaded", function(event, data) {
         if(data.response) {
             $('#add-upload-file').val(data.response.data.filename);
+            $("#add-upload-file").closest('.form-group').removeClass('has-error');
+            // $("#add-upload-file").closest('.form-group').find('.help-block').hide();
         }
     });
     $('#add-file').on('filecleared', function(event) {
