--- a/web/application/admin/view/goods/index.html
+++ b/web/application/admin/view/goods/index.html
@@ -171,7 +171,6 @@
             var id = $(event.relatedTarget).data('id');
             $("#up-request").data('id',id);
         });
-
         $("#up-request").click(function () {
             var id = $(this).data('id');
             if(id < 0){
@@ -179,8 +178,8 @@
             }
             $.ajax({
                 type:'post',
-                url:'?s=admin/goods/delete&id='+id,
-                data:{},
+                url:'?s=admin/goods/update&id='+id,
+                data:{state:2},
                 dataType:'json',
                 success:function (data) {
                     if(data.status == 0){
@@ -191,8 +190,6 @@
                 }
             })
         });
-
-
         $('#down-modal').on('show.bs.modal', function (event) {
             var id = $(event.relatedTarget).data('id');
             $("#down-request").data('id',id);
@@ -205,8 +202,8 @@
             }
             $.ajax({
                 type:'post',
-                url:'?s=admin/goods/delete&id='+id,
-                data:{},
+                url:'?s=admin/goods/update&id='+id,
+                data:{state:1},
                 dataType:'json',
                 success:function (data) {
                     if(data.status == 0){
@@ -217,7 +214,6 @@
                 }
             })
         });
-
     });
     var url = '{:url("admin/goods/index")}';
     $('a[href="'+url+'"]').addClass('active');
