--- a/web/application/admin/view/goods/index.html
+++ b/web/application/admin/view/goods/index.html
@@ -30,10 +30,18 @@
                             <form class="form-inline ml-3" action="{:url()}"  method="get">
                                 <div class="input-group">
                                     <select class="form-control" name="supplier"  placeholder="供应商">
-                                        <option value="0" {if $supplier eq 0}selected{/if}>全部</option>
+                                        <option value="0" {if $supplier eq 0}selected{/if}>全部供应商</option>
                                         {volist name=":getSupplierList()"  id='user'}
                                         <option  {if $supplier eq $user.id}selected{/if} value="{$user.id}">{$user.real_name}</option>
                                         {/volist}
+                                    </select>
+                                </div>&nbsp;&nbsp;
+                                <div class="input-group">
+                                    <select class="form-control" name="state">
+                                        <option  {if $state eq -1} selected{/if} value="-1">全部状态</option>
+                                        <option  {if $state eq 0} selected{/if} value="0">待审核</option>
+                                        <option  {if $state eq 1}selected{/if} value="1">审核通过</option>
+                                        <option   {if $state eq 2}selected{/if} value="2">审核失败</option>
                                     </select>
                                 </div>&nbsp;&nbsp;
                                 <div class="input-group">
@@ -45,7 +53,9 @@
                             </form>
                         </div>
                         <div class="col-md-6">
+                            {if $groupId eq 3}
                             <a class="btn btn-primary pull-right"  target="_blank"  href="{:url('admin/goods/create')}" >新增</a>
+                            {/if}
                         </div>
                     </div>
                     <div class="card-body">
@@ -76,6 +86,10 @@
                                 <td>{:getGoodsMallState($goods.mall_state,1)}</td>
                                 <td>
                                     <a href="{:url('admin/goods/view','id='.$goods.id)}"  target="_blank" class="btn btn-sm btn-info"    >详情</a>
+                                    {if $groupId == 2}
+                                    <a href="javascript:void(0)"  class="btn btn-sm btn-success"  data-id="{$goods.id}" data-toggle="modal"   data-target="#check-modal">审核</a>
+                                    {/if}
+                                    {if $groupId == 3}
                                     <a href="{:url('admin/goods/edit','id='.$goods.id)}"  target="_blank" class="btn btn-sm btn-primary"    >编辑</a>
                                     {if $goods.state == 2}
                                     <a href="{:url('admin/goods/edit','id='.$goods.id)}"  target="_blank" data-toggle="modal"  data-id="{$goods.id}"  data-state="1" data-target="#down-modal"  class="btn btn-sm btn-warning">下架</a>
@@ -83,6 +97,7 @@
                                     <a href="{:url('admin/goods/edit','id='.$goods.id)}"  target="_blank" data-toggle="modal" data-id="{$goods.id}"  data-state="2" data-target="#up-modal"  class="btn btn-sm btn-warning">上架</a>
                                     {/if}
                                     <a href="javascript:void(0)"  class="btn btn-sm btn-danger"  data-id="{$goods.id}" data-toggle="modal"   data-target="#delete-modal">删除</a>
+                                    {/if}
                                 </td>
                             </tr>
                             {/volist}
@@ -129,6 +144,40 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">否</button>
                 <button type="button" class="btn btn-primary" data-id="" id="down-request">是</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade" id="check-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">审核操作</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <form role="form" class="" id="check-form">
+                                <div class="form-group form-inline">
+                                    <label  class="col-md-2">状态</label>
+                                    <select class="form-control" name="mall_state">
+                                        <option  value="0">待审核</option>
+                                        <option  value="1">审核通过</option>
+                                        <option  value="2">审核失败</option>
+                                    </select>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary pull-left" data-dismiss="modal">关闭</button>
+                    <button type="button" class="btn btn-primary" data-id="" id="check-request">保存</button>
+                </div>
             </div>
         </div>
     </div>
@@ -204,6 +253,32 @@
                 type:'post',
                 url:'?s=admin/goods/update&id='+id,
                 data:{state:1},
+                dataType:'json',
+                success:function (data) {
+                    if(data.status == 0){
+                        window.location.reload();
+                    }else{
+                        alert(data.msg);
+                    }
+                }
+            })
+        });
+
+        $('#check-modal').on('show.bs.modal', function (event) {
+            var id = $(event.relatedTarget).data('id');
+            $("#check-request").data('id',id);
+        });
+
+        $("#check-request").click(function () {
+            var id = $(this).data('id');
+            if(id < 0){
+                return;
+            }
+            var state = $('#check-form').find('select[name="mall_state"]').val();
+            $.ajax({
+                type:'post',
+                url:'?s=admin/goods/check&id='+id,
+                data:{state:state},
                 dataType:'json',
                 success:function (data) {
                     if(data.status == 0){
