--- a/web/application/admin/view/goods/view.html
+++ b/web/application/admin/view/goods/view.html
@@ -2,6 +2,30 @@
 
 {include file="layout/left" groupId="$groupId" keywords="开源WEB开发框架" /}
 
+<style type="text/css">
+    .preview-phone{
+        position: fixed;
+        width: 410px;
+        height: 840px;
+        background: url(__STATIC__/img/iphone-bg.png) no-repeat no-repeat;
+        z-index: 9999;
+        left: 746.5px;
+        top: 50px;
+    }
+
+    #preview-html{
+        position: absolute;
+        width:361px;
+        height: 638px;
+        top:98px;
+        left:24px;
+        border: 2px solid #000;
+        border-radius: 5px;
+        outline: none;
+        background-color: #fff;
+    }
+</style>
+
 <div class="content-wrapper">
     <div class="content-header">
         <div class="container-fluid">
@@ -107,11 +131,32 @@
                                 <span class="">{:getImgUrl($goods.detail)}</span>
                             </div>
                         </div>
+
+                        <div class="form-inline">
+                             <a href="javascript:void(0);"  class="btn btn-primary"  data-toggle="modal"   data-target="#view-modal">预览</a>
+                        </div>
+
                     </div>
                 </div>
             </div>
         </div>
     </section>
+</div>
+
+
+<div class="modal fade preview-phone" id="view-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+    <iframe id="preview-html" name="preview-html" src="{:url('admin/goods/preview','id='.$goods->id)}"></iframe>
+    </div>
+    <!--<div class="modal-dialog" role="document">-->
+        <!--<div class="modal-content">-->
+            <!--<div class="modal-body">是否确认下架该商品?</div>-->
+            <!--<div class="modal-footer">-->
+                <!--<button type="button" class="btn btn-secondary" data-dismiss="modal">否</button>-->
+                <!--<button type="button" class="btn btn-primary" data-id="" id="down-request">是</button>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
 </div>
 
 {include file="layout/footer" title="$title" keywords="" /}
