修改后台菜单页面

--- a/web/application/admin/view/layout/left.html
+++ b/web/application/admin/view/layout/left.html
@@ -82,9 +82,9 @@
                     </a>
                     <ul class="nav nav-treeview">
                         <li class="nav-item">
-                            <a href="{:url('admin/banner/index')}" class="nav-link">
+                            <a href="{:url('admin/index_menu/index')}" class="nav-link">
                                 <i class="fa fa-image nav-icon"></i>
-                                <p>菜单管理</p>
+                                <p>首页菜单</p>
                             </a>
                         </li>
                     </ul>
