--- a/web/application/admin/view/type/create.html
+++ b/web/application/admin/view/type/create.html
@@ -34,7 +34,6 @@
                         <!-- form start -->
                         <form  id="add-form"  role="form" action="" method="post" onsubmit="return validateSubmit()">
                             <div class="card-body">
-
                                 <div class="form-inline form-group">
                                     <label class="col-md-2 pull-right">分类名称</label>
                                     <input type="text" class="form-control" name="name" maxlength="50" placeholder="">
@@ -50,14 +49,13 @@
                                         </select>
                                         <p class="help-block">如果不选择上级分类，默认为顶级分类</p>
                                     </div>
-
                                 </div>
                                 <div class="form-inline form-group">
-                                    <label  class="col-md-2 pull-right">图标:</label>
-                                    <div class="">
+                                    <label  class="col-md-2 pull-right">图标</label>
+                                    <div>
                                         <input id="add-file" name="file" type="file" data-show-caption="true">
                                         <input  type="hidden" name="path" id="add-upload-file"  value="" />
-                                        <p class="help-block">支持jpg、jpeg、png格式，大小不超过2.0M</p>
+                                        <p class="help-block2">支持jpg、jpeg、png格式，大小不超过2.0M</p>
                                     </div>
                                 </div>
                                 <div class="form-inline form-group">
@@ -120,11 +118,11 @@
     $('#add-file').on("fileuploaded", function(event, data) {
         if(data.response) {
             $('#add-upload-file').val(data.response.data.filename);
-            $("#add-upload-file").closest('.form-group').removeClass('has-error');
-            // $("#add-upload-file").closest('.form-group').find('.help-block').hide();
+            $('#add-upload-file').closest('.form-group').removeClass('has-error');
+            $('#add-upload-file').closest('.form-group').find('.help-block').hide();
         }
     });
-    $('#add-file').on('filecleared', function(event) {
+    $('#add-file').on('fileclear', function(event, id) {
         $('#add-upload-file').val('');
     });
 
