--- a/web/application/admin/view/certification/index.html
+++ b/web/application/admin/view/certification/index.html
@@ -36,6 +36,14 @@
                                     </select>
                                 </div> &nbsp;&nbsp;
                                 <div class="input-group">
+                                    <select class="form-control" name="status"  placeholder="认证状态">
+                                        <option  {if $status eq 0}selected{/if} value="0" >全部审核状态</option>
+                                        <option  {if $status eq 1}selected{/if} value="1">待审核</option>
+                                        <option  {if $status eq 2}selected{/if} value="2">已通过</option>
+                                        <option  {if $status eq 3}selected{/if} value="3">已拒绝</option>
+                                    </select>
+                                </div> &nbsp;&nbsp;
+                                <div class="input-group">
                                     <input class="form-control form-control-navbar"  name="k" type="search"  value="{$k}" placeholder="企业名称/法人代表/联系人" aria-label="Search">
                                     <div class="input-group-append">
                                         <button class="btn btn-primary" id="search" type="submit">查找</button>
