--- a/web/application/admin/view/banner/index.html
+++ b/web/application/admin/view/banner/index.html
@@ -143,7 +143,7 @@
                                     </select>
                                 </div>
                                 <div class="form-group form-inline">
-                                    <label  class="control-label col-md-3" >状态</label>
+                                    <label  class="control-label col-md-3">状态</label>
                                     <select class="form-control col-md-4" name="target">
                                         <option  value="1">显示</option>
                                         <option value="0">隐藏</option>
@@ -155,7 +155,7 @@
                                         <input type="number" min="0" class="form-control col-md-8" value="0" name="sequence" placeholder="">
                                     </div>
                                 </div>
-                                <div class="form-group form-inline">
+                                <div class="form-inline form-group">
                                     <label class="col-md-3 control-label">图片上传</label>
                                     <div class="col-md-8 no-padding">
                                         <input id="add-file" name="file" type="file" data-show-caption="true">
