--- a/web/application/admin/view/notice/index.html
+++ b/web/application/admin/view/notice/index.html
@@ -92,28 +92,42 @@
             <div class="modal-body ">
                 <div class="container-fluid">
                     <div class="row">
-                        <!-- left column -->
                         <div class="col-md-12">
-                            <!-- form start -->
                             <form role="form" class="" id="add-form">
-                                <div class="form-group">
-                                    <label for="">标题</label>
-                                    <input type="text" class="form-control"  name="title" placeholder="公告标题">
+                                <div class="form-group form-inline">
+                                    <label class="col-md-2">标题</label>
+                                    <div class="col-md-9">
+                                        <div class="row">
+                                            <input type="text" class="form-control col-md-9"  name="title" placeholder="公告标题">
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="form-group">
-                                    <label for="">摘要</label>
-                                    <textarea class="form-control" rows="3" placeholder="摘要..."  name="summary"></textarea>
+                                <div class="form-group form-inline">
+                                    <label class="col-md-2">摘要</label>
+                                    <div class="col-md-9">
+                                        <div class="row">
+                                            <textarea class="form-control col-md-9" rows="3" placeholder="摘要..."  name="summary"></textarea>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="form-group">
-                                    <label for="">正文</label>
-                                    <textarea id="add-content" class="textarea" placeholder="公告内容..."  name="content"  style="width: 100%; height: 200px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;"></textarea>
+                                <div class="form-group form-inline">
+                                    <label class="col-md-2">正文</label>
+                                    <div class="col-md-9">
+                                        <div class="row">
+                                            <textarea id="add-content" class="textarea" placeholder="公告内容..."  name="content"  style="width: 100%; height: 200px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;"></textarea>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="form-group">
-                                    <label >状态</label>
-                                    <select class="form-control">
-                                        <option value="1">显示</option>
-                                        <option value="0">屏蔽</option>
-                                    </select>
+                                <div class="form-group form-inline">
+                                    <label class="col-md-2">状态</label>
+                                    <div class="col-md-9">
+                                        <div class="row">
+                                            <select class="form-control col-md-3">
+                                                <option value="1">显示</option>
+                                                <option value="0">屏蔽</option>
+                                            </select>
+                                        </div>
+                                    </div>
                                 </div>
                             </form>
                         </div>
@@ -144,24 +158,40 @@
                         <div class="col-md-12">
                             <!-- form start -->
                             <form role="form" class="" id="edit-form">
-                                <div class="form-group">
-                                    <label for="">标题</label>
-                                    <input type="text" class="form-control"  name="title" placeholder="公告标题">
+                                <div class="form-group form-inline">
+                                    <label class="col-md-2">标题</label>
+                                    <div class="col-md-9">
+                                        <div class="row">
+                                            <input type="text" class="form-control col-md-9"  name="title" placeholder="公告标题">
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="form-group">
-                                    <label for="">摘要</label>
-                                    <textarea class="form-control" rows="3" placeholder="摘要..."  name="summary"></textarea>
+                                <div class="form-group form-inline">
+                                    <label class="col-md-2">摘要</label>
+                                    <div class="col-md-9">
+                                        <div class="row">
+                                            <textarea class="form-control col-md-9" rows="3" placeholder="摘要..."  name="summary"></textarea>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="form-group">
-                                    <label for="">正文</label>
-                                    <textarea  id="edit-content" class="textarea2" placeholder="公告内容..."  name="content"  style="width: 100%; height: 200px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;"></textarea>
+                                <div class="form-group form-inline">
+                                    <label class="col-md-2">正文</label>
+                                    <div class="col-md-9">
+                                        <div class="row">
+                                            <textarea  id="edit-content" class="textarea2" placeholder="公告内容..."  name="content"  style="width: 100%; height: 200px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;"></textarea>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="form-group">
-                                    <label >状态</label>
-                                    <select class="form-control" name="status">
-                                        <option value="1">显示</option>
-                                        <option value="0">屏蔽</option>
-                                    </select>
+                                <div class="form-group form-inline">
+                                    <label class="col-md-2">状态</label>
+                                    <div class="col-md-9">
+                                        <div class="row">
+                                            <select class="form-control col-md-3" name="status">
+                                                <option value="1">显示</option>
+                                                <option value="0">屏蔽</option>
+                                            </select>
+                                        </div>
+                                    </div>
                                 </div>
                             </form>
                         </div>
