--- a/web/application/admin/view/goods/create.html
+++ b/web/application/admin/view/goods/create.html
@@ -39,14 +39,14 @@
                             <div class="card-body">
                                 <div class="form-inline form-group">
                                     <label for="" class="col-md-2 pull-right">所属商城分类</label>
-                                    <span class="">
+                                    <div class="col-md-5 no-padding">
                                         <select  id="goods_type" class="form-control"  name="type">
                                         {foreach name=":getTypeLevelList(3)" id="type"}
                                         <option value="{$type.id}" >
                                             {if $type.level == 2}&nbsp;&nbsp;&nbsp;&nbsp;|-&nbsp;{elseif $type.level == 3}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;|-&nbsp;{/if}{$type.name}</option>
                                         {/foreach}
                                     </select>
-                                    </span>
+                                    </div>
                                 </div>
 
                                 <div class="form-inline form-group">
@@ -237,6 +237,9 @@
 <script src="__STATIC__/js/plugins/kindeditor/lang/zh-CN.js"></script>
 
 <script type="text/javascript">
+    var url = '{:url("admin/goods/index")}';
+    $('a[href="'+url+'"]').addClass('active');
+    $('a[href="'+url+'"]').parent().parent().parent().addClass('menu-open');
     function validateSubmit(){
         if ($("#add-form").data('bootstrapValidator').isValid()) {
            return true;
