--- a/web/application/admin/view/order/index.html
+++ b/web/application/admin/view/order/index.html
@@ -197,28 +197,26 @@
                     <div class="row">
                         <div class="col-md-12">
                             <form role="form" class="" id="pricing-form">
-                                <div class="form-group">
-                                    <label >合同</label>
-                                    <select class="form-control" name="contract_type">
-                                        <option  value="1">已签订合同</option>
-                                        <option  value="2">未签订合同</option>
+                                <div class="form-group form-inline">
+                                    <label class="col-md-3">合同</label>
+                                    <select class="form-control contract_type" name="contract_type">
+                                        <option  value="1">未签订合同</option>
+                                        <option  value="2">已签订合同</option>
                                     </select>
                                 </div>
-                                <div class="form-group">
-                                    <label >合同编号</label>
+                                <div class="form-group form-inline contract_container">
+                                    <label class="col-md-3">合同编号</label>
                                     <input type="text" class="form-control" name="contract_number" placeholder="">
                                 </div>
-                                <div class="form-group">
-                                    <label >核实总价</label>
+                                <div class="form-group form-inline">
+                                    <label class="col-md-3">核实总价</label>
                                     <div class="input-group">
-                                        <input class="form-control form-control-navbar"  name="sum_money" type="number"  value="" placeholder="" aria-label="Search">
-                                        <div class="input-group-append">
-                                            元
-                                        </div>
+                                        <input class="form-control form-control-navbar"  min="0" name="sum_money" type="number"  value="" placeholder="" aria-label="Search">
+                                        <div class="input-group-append" style="padding-left: 5px;padding-top: 5px;">元</div>
                                     </div>
                                 </div>
-                                <div class="form-group">
-                                    <label >账期截止</label>
+                                <div class="form-group form-inline date_container">
+                                    <label class="col-md-3">账期截止</label>
                                     <input type="date" class="form-control" name="pay_date" placeholder="">
                                 </div>
                             </form>
@@ -248,13 +246,13 @@
                     <div class="row">
                         <div class="col-md-12">
                             <form role="form" class="" id="sign-form">
-                                <div class="form-group">
-                                    <label >合同编号</label>
-                                    <input type="text" class="form-control" name="contract_number" placeholder="">
+                                <div class="form-group form-inline">
+                                    <label class="col-md-3">合同编号</label>
+                                    <input type="text" class="form-control col-md-5" name="contract_number" placeholder="">
                                 </div>
-                                <div class="form-group">
-                                    <label >账期截止</label>
-                                    <input type="date" class="form-control" name="pay_date" placeholder="">
+                                <div class="form-group form-inline">
+                                    <label class="col-md-3">账期截止</label>
+                                    <input type="date" class="form-control col-md-5" name="pay_date" placeholder="">
                                 </div>
                             </form>
                         </div>
@@ -273,7 +271,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">订单核价</h5>
+                <h5 class="modal-title">订单收款</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -283,27 +281,27 @@
                     <div class="row">
                         <div class="col-md-12">
                             <form role="form" class="" id="remittance-form">
-                                <div class="form-group">
-                                    <label >打款类型</label>
-                                    <select class="form-control" name="pay_type">
+                                <div class="form-group form-inline">
+                                    <label  class="col-md-4">打款类型</label>
+                                    <select class="form-control col-md-5" name="pay_type">
                                         <option  value="3">转账</option>
                                         <option  value="4">汇款</option>
                                     </select>
                                 </div>
-                                <div class="form-group">
-                                    <label >流水号/票号</label>
-                                    <input type="text" class="form-control" name="number" placeholder="">
+                                <div class="form-group form-inline">
+                                    <label class="col-md-4">流水号/票号</label>
+                                    <input type="text" class="form-control col-md-5" name="number" placeholder="">
                                 </div>
-                                <div class="form-group">
-                                    <label >到账时间/承兑时间</label>
+                                <div class="form-group form-inline">
+                                    <label class="col-md-4">到账/承兑时间</label>
                                     <input type="date" class="form-control" name="pay_time" placeholder="">
                                 </div>
-                                <div class="form-group">
-                                    <label class="col-sm-4 control-label">回执图片:</label>
-                                    <div class="col-sm-12">
+                                <div class="form-group form-inline">
+                                    <label class="col-md-4">回执图片</label>
+                                    <div class="col-md-8 no-padding">
                                         <input id="remittance-file" name="file" type="file" data-show-caption="true">
                                         <input  type="hidden" name="path" id="remittance-upload-file"  value="" />
-                                        <p class="help-block">支持jpg、jpeg、png格式，大小不超过2.0M</p>
+                                        <p class="help-block2">支持jpg、jpeg、png格式，大小不超过5M</p>
                                     </div>
                                 </div>
                                 <input type="hidden" class="form-control" name="tag" placeholder="">
@@ -319,7 +317,7 @@
         </div>
     </div>
 </div>
-<!-- 取消订单 -->
+<!-- 问题订单 -->
 <div class="modal fade" id="problem-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -331,7 +329,7 @@
         </div>
     </div>
 </div>
-
+<!--取消订单-->
 <div class="modal fade" id="cancel-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -348,94 +346,117 @@
 <script src="__STATIC__/js/plugins/bootstrap-fileinput/js/fileinput.js" type="text/javascript"></script>
 <script type="text/javascript" src="__STATIC__/js/plugins/bootstrapvalidator/js/bootstrapValidator.js"></script>
 <script type="text/javascript">
-
     var url = '{:url("admin/order/index")}';
     $('a[href="'+url+'"]').addClass('active');
     $('a[href="'+url+'"]').parent().parent().parent().addClass('menu-open');
-
-    //折叠展示
-    function displayData(_self)
-    {
-        if(_self.title == "关闭")
-        {
-            jqshow($(_self).parent().parent().attr('id'), 'hide');
-            $(_self).removeClass("fa-minus-square-o").addClass("fa-plus-square-o");
-            _self.title = '打开';
-        }
-        else
-        {
-            jqshow($(_self).parent().parent().attr('id'), 'show');
-            $(_self).removeClass("fa-plus-square-o").addClass("fa-minus-square-o");
-            _self.title = '关闭';
-        }
-    }
-
-    function jqshow(id,isshow) {
-        var obj = $("#list_table tr[parent='"+id+"']");
-        if (obj.length>0)
-        {
-            obj.each(function(i) {
-                jqshow($(this).attr('id'), isshow);
-            });
-            if (isshow=='hide')
-            {
-                obj.hide();
-            }
-            else
-            {
-                obj.show();
-            }
-        }
-    }
-
+    //核价
     $('#pricing-modal').on('show.bs.modal', function (event) {
         var id = $(event.relatedTarget).data('id');
+        $('.contract_type').trigger('change');
         $("#pricing-request").data('id',id);
+    });
+    $('.contract_type').change(function () {
+        var value = $(this).val();
+        if(value == 2){
+            $('.contract_container').show();
+            $('.date_container').show();
+        }
+        if(value == 1){
+            $('.contract_container').hide();
+            $('.date_container').hide();
+        }
+    });
+    $("#pricing-form").bootstrapValidator({
+        excluded:[":disabled"],
+        live: 'disabled',
+        message: 'This value is not valid',
+        fields: {
+            sum_money: {
+                message: 'The name is not valid',
+                validators: {
+                    notEmpty: {
+                        message: '总价必须填写'
+                    },
+                }
+            }
+        }
     });
     $("#pricing-request").click(function () {
         var id = $(this).data('id');
         if(id < 0){
             return;
         }
-        if(confirm('确认要提交？')){
-            $.ajax({
-                type:'post',
-                url:'?s=admin/order/pricing&id='+id,
-                data:$('#pricing-form').serialize(),
-                dataType:'json',
-                success:function (data) {
-                    if(data.status == 0){
-                        window.location.reload();
-                    }else{
-                        alert(data.msg);
+        //验证字段
+        $("#pricing-form").data('bootstrapValidator').validate();
+        if($("#pricing-form").data('bootstrapValidator').isValid()){
+            if(confirm('确认要提交？')){
+                $.ajax({
+                    type:'post',
+                    url:'?s=admin/order/pricing&id='+id,
+                    data:$('#pricing-form').serialize(),
+                    dataType:'json',
+                    success:function (data) {
+                        if(data.status == 0){
+                            window.location.reload();
+                        }else{
+                            alert(data.msg);
+                        }
                     }
-                }
-            })
+                })
+            }
         }
     });
     $('#sign-modal').on('show.bs.modal', function (event) {
         var id = $(event.relatedTarget).data('id');
         $("#sign-request").data('id',id);
     });
+    $("#sign-form").bootstrapValidator({
+        excluded:[":disabled"],
+        live: 'disabled',
+        message: 'This value is not valid',
+        fields: {
+            contract_number: {
+                message: 'The name is not valid',
+                validators: {
+                    notEmpty: {
+                        message: '合同编号必须填写'
+                    },
+                }
+            },
+            pay_date:{
+                message: 'The pay_date is not valid',
+                validators: {
+                    date: {
+                        format: 'YYYY/MM/DD',
+                        message: '日期格式不正确'
+                    },
+                }
+            }
+        }
+    });
     $("#sign-request").click(function () {
         var id = $(this).data('id');
         if(id < 0){
             return;
         }
-        if(confirm('确认要提交？')){
-            $.ajax({
-                type:'post',
-                url:'?s=admin/order/sign&id='+id,
-                data:$('#sign-form').serialize(),
-                dataType:'json',
-                success:function (data) {
-                    if(data.status == 0){
-                        window.location.reload();
-                    }else{
-                        alert(data.msg);
+        //验证字段
+        $("#sign-form").data('bootstrapValidator').validate();
+        if($("#sign-form").data('bootstrapValidator').isValid()) {
+            if (confirm('确认要提交？')) {
+                $.ajax({
+                    type: 'post',
+                    url: '?s=admin/order/sign&id=' + id,
+                    data: $('#sign-form').serialize(),
+                    dataType: 'json',
+                    success: function (data) {
+                        if (data.status == 0) {
+                            window.location.reload();
+                        } else {
+                            alert(data.msg);
+                        }
                     }
-                }
-            })
+                })
+            }
         }
     });
    //收款
@@ -453,8 +474,8 @@
             showCaption: true,//是否显示标题
             allowedPreviewTypes: ['image'],
             allowedFileTypes: ['image'],
-            allowedFileExtensions: ['jpg', 'png'],
-            maxFileSize: 2000,
+            allowedFileExtensions: ['jpg', 'png','jpeg'],
+            maxFileSize: 5120,
             maxFileCount: 1,
             maxImageWidth: '1920',
             maxImageHeight: '1000',
@@ -464,32 +485,75 @@
                 return obj;
             }
         }).on("fileuploaded", function(event, data) {
-            if(data.response)
-            {
-                alert(data.response.data.filename);
+            if(data.response){
+              //  alert(data.response.data.filename);
                 $('#remittance-upload-file').val(data.response.data.filename);
+                $('#remittance-upload-file').closest('.form-group').removeClass('has-error');
+                $('#remittance-upload-file').closest('.form-group').find('.help-block').html('');
             }
         });
+        $("#remittance-file").on('fileclear',function(event, id){
+            $('#remittance-upload-file').val('');
+        });
+    });
+
+    $("#remittance-form").bootstrapValidator({
+        excluded:[":disabled"],
+        live: 'disabled',
+        message: 'This value is not valid',
+        fields: {
+            number: {
+                message: 'The name is not valid',
+                validators: {
+                    notEmpty: {
+                        message: '流水/票号不能为空'
+                    },
+                }
+            },
+            path: {
+                message: 'The name is not valid',
+                validators: {
+                    notEmpty: {
+                        message: '回执图片不能为空'
+                    },
+                }
+            },
+            pay_time:{
+                message: 'The pay_date is not valid',
+                validators: {
+                    notEmpty: {
+                        message: '回执图片不能为空'
+                    },
+                    date: {
+                        format: 'YYYY/MM/DD',
+                        message: '日期格式不正确'
+                    },
+                }
+            }
+        }
     });
     $("#remittance-request").click(function () {
         var id = $(this).data('id');
         if(id < 0){
             return;
         }
-        if(confirm('确认要提交？')){
-            $.ajax({
-                type:'post',
-                url:'?s=admin/order/remittance&id='+id,
-                data:$('#remittance-form').serialize(),
-                dataType:'json',
-                success:function (data) {
-                    if(data.status == 0){
-                        window.location.reload();
-                    }else{
-                        alert(data.msg);
+        $("#remittance-form").data('bootstrapValidator').validate();
+        if($("#remittance-form").data('bootstrapValidator').isValid()) {
+            if (confirm('确认要提交？')) {
+                $.ajax({
+                    type: 'post',
+                    url: '?s=admin/order/remittance&id=' + id,
+                    data: $('#remittance-form').serialize(),
+                    dataType: 'json',
+                    success: function (data) {
+                        if (data.status == 0) {
+                            window.location.reload();
+                        } else {
+                            alert(data.msg);
+                        }
                     }
-                }
-            })
+                })
+            }
         }
     });
 
