--- a/jzdc-services/css/as.css
+++ b/jzdc-services/css/as.css
@@ -19,7 +19,9 @@
 }
 
 .step3{
-    padding-top: 4.4rem;
+    height:fit-content;
+    width: 100%;
+    /* transform: translateY(-50%) */
 }
 
 .as-next{
