--- a/web/application/admin/view/order/index.html
+++ b/web/application/admin/view/order/index.html
@@ -141,7 +141,8 @@
                                             无
                                             {/if}
                                         </p>
-                                        <p>买家留言:{$order.buyer_comment}</p>
+                                        <p>物料规格: {$order.buyer_remark}</p>
+                                        <p>买家留言: {$order.buyer_comment}</p>
                                     </div>
 
                                 </td>
