修改订单总价以及协议文件上传

--- a/web/application/admin/view/order/index.html
+++ b/web/application/admin/view/order/index.html
@@ -67,8 +67,13 @@
                             <a class="btn btn-primary pull-right"  target="_blank"  href="{:url('admin/order/export')}" >导出</a>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col-md-10">
+                            <p style="padding-left: 18px;padding-top: 5px;margin-bottom: 0px">总价: {$total}元</p>
+                        </div>
+                    </div>
                     <!-- /.card-header -->
-                    <div class="card-body">
+                    <div class="card-body" style="padding-top: 0px">
                         <table class="table list-table" id="list_table">
                             <colgroup>
                                 <!--<col width="40px">-->
